# news-aggregator

./: .gitignore  README.md  example.env  pyproject.toml
config/: .env.example  config.example.yaml  config.yaml
config/prompts/: beginner.txt  cs_student.txt
src/news_aggregator/: config.py  deduplicator.py  email_composer.py  email_sender.py  fetcher.py  logger.py  models.py  orchestrator.py  scheduler.py  summarizer.py
src/news_aggregator/fetchers/: __init__.py  arxiv.py  hacker_news.py  multi_source.py  rss_fetcher.py  web_scraper.py
src/news_aggregator/processing/: __init__.py  deduplicator.py  ranker.py  summarizer.py
src/news_aggregator/providers/: __init__.py  anthropic_provider.py  base.py  exceptions.py  metrics.py  multi_provider_summarizer.py  openai_provider.py  registry.py  selector.py
src/news_aggregator/tools/: __init__.py  feed_discovery.py  feed_manager.py  feed_scorer.py  opml_importer.py
templates/: email_template.html
tests/: test_multi_provider.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
