[project]
name = "news-aggregator"
version = "2.0.0"
description = "Daily AI News Aggregator - Automated news fetching, summarization, and email delivery for Polymarket, AI, and Robotics topics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.3",
    "pyyaml>=6.0.3",
]

[project.scripts]
news-aggregator = "news_aggregator.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
